--- a/app/shell_minimal.html
+++ b/app/shell_minimal.html
@@ -8,45 +8,11 @@
       * { margin:0; padding:0; }
       html, body { width:100%; height:100%; overflow:hidden; }
       .emscripten { display: block; }
-      textarea.emscripten { font-family: monospace; width: 100%; }
-      div.emscripten { text-align: center; }
+      textarea.emscripten { font-family: monospace; position: absolute; width: 100%; bottom: 0; left: 0; z-index: 1; }
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-      canvas.emscripten { border: 0px none; background-color: black; display: block; width:100%; height:100%; object-fit: fill; }
+      canvas.emscripten { border: 0px none; background-color: black; display: block; width:100%; height:100%; object-fit: fill; position: absolute; z-index: -1; }
       img.splash { display:block; width:100%; height:85%; object-fit:fill; }
       div.splash { display:flex; width:100%; height:15%; text-align:center; align-items: center; justify-content: center; background-color:#FFFFFF; }
-
-      .spinner {
-        height: 50px;
-        width: 50px;
-        margin: 0px auto;
-        -webkit-animation: rotation .8s linear infinite;
-        -moz-animation: rotation .8s linear infinite;
-        -o-animation: rotation .8s linear infinite;
-        animation: rotation 0.8s linear infinite;
-        border-left: 10px solid rgb(0,150,240);
-        border-right: 10px solid rgb(0,150,240);
-        border-bottom: 10px solid rgb(0,150,240);
-        border-top: 10px solid rgb(100,0,200);
-        border-radius: 100%;
-        background-color: rgb(200,100,250);
-      }
-      @-webkit-keyframes rotation {
-        from {-webkit-transform: rotate(0deg);}
-        to {-webkit-transform: rotate(360deg);}
-      }
-      @-moz-keyframes rotation {
-        from {-moz-transform: rotate(0deg);}
-        to {-moz-transform: rotate(360deg);}
-      }
-      @-o-keyframes rotation {
-        from {-o-transform: rotate(0deg);}
-        to {-o-transform: rotate(360deg);}
-      }
-      @keyframes rotation {
-        from {transform: rotate(0deg);}
-        to {transform: rotate(360deg);}
-      }
-
     </style>
   </head>
   <body>
@@ -57,17 +23,11 @@
         Source code: https://github.com/pelya/doom-kaios
       </font>
     </div>
-    <div class="emscripten" id="status">Downloading...</div>
-    <progress value="0" max="100" id="progress" hidden=1></progress>
-    <figure style="overflow:visible;" id="spinner"><div class="spinner"></div><center style="margin-top:0.5em"><strong>emscripten</strong></center></figure>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
     <textarea class="emscripten" id="output" rows="8"></textarea>
 
     <script type='text/javascript'>
       var sys_fs_init_is_done = 0; // Used from C code
-      var statusElement = document.getElementById('status');
-      var progressElement = document.getElementById('progress');
-      var spinnerElement = document.getElementById('spinner');
       var outputElement = document.getElementById('output');
 
       var Module = {
@@ -92,6 +52,7 @@
         })(),
         printErr: function(text) {
           if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
+          Module.print(text);
           console.error(text);
         },
         canvas: (function() {
@@ -114,18 +75,8 @@
           Module.setStatus.last.text = text;
           if (m) {
             text = m[1];
-            progressElement.value = parseInt(m[2])*100;
-            progressElement.max = parseInt(m[4])*100;
-            progressElement.hidden = false;
-            spinnerElement.hidden = false;
           } else {
-            progressElement.value = null;
-            progressElement.max = null;
-            progressElement.hidden = true;
-            statusElement.innerHTML = text;
             if (!text) {
-              spinnerElement.hidden = true;
-              statusElement.hidden = true;
               outputElement.hidden = true;
               outputElement.style.display = "none";
             }
@@ -140,7 +91,6 @@
       Module.setStatus('Downloading...');
       window.onerror = function() {
         Module.setStatus('Exception thrown, see JavaScript console');
-        spinnerElement.style.display = 'none';
         Module.setStatus = function(text) {
           if (text) Module.printErr('[post-exception status] ' + text);
         };
