--- a/app/shell_minimal.html
+++ b/app/shell_minimal.html
@@ -8,11 +8,11 @@
       * { margin:0; padding:0; }
       html, body { width:100%; height:100%; overflow:hidden; }
       .emscripten { display: block; }
-      textarea.emscripten { font-family: monospace; position: absolute; width: 100%; bottom: 0; left: 0; z-index: 1; }
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-      canvas.emscripten { border: 0px none; background-color: black; display: block; width:100%; height:100%; object-fit: fill; position: absolute; z-index: -1; }
-      img.splash { display:block; width:100%; height:85%; object-fit:fill; }
-      div.splash { display:flex; width:100%; height:15%; text-align:center; align-items: center; justify-content: center; background-color:#FFFFFF; }
+      canvas.emscripten { border: 0px none; background-color: black; display: block; position: absolute; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 1; }
+      textarea.emscripten { font-family: monospace; font-size: 10px; position: absolute; width: 100%; height: 35%; bottom: 0; left: 0; z-index: 10; }
+      img.splash { width: 100%; height: 85%; top: 0; object-fit: fill; position: absolute; z-index: 3; }
+      div.splash { width: 100%; height: 15%; bottom: 0; text-align: center; align-items: center; justify-content: center; background-color:#FFFFFF; position: absolute; z-index: 3; }
     </style>
   </head>
   <body>
@@ -24,7 +24,7 @@
       </font>
     </div>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
-    <textarea class="emscripten" id="output" rows="8"></textarea>
+    <textarea class="emscripten" id="output" rows="8" tabindex=-1></textarea>
 
     <script type='text/javascript'>
       var sys_fs_init_is_done = 0; // Used from C code
@@ -52,7 +52,6 @@
         })(),
         printErr: function(text) {
           if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-          Module.print(text);
           console.error(text);
         },
         canvas: (function() {
