--- a/app/shell_minimal_debug.html
+++ b/app/shell_minimal_debug.html
@@ -10,7 +10,7 @@
       .emscripten { display: block; }
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
       canvas.emscripten { border: 0px none; background-color: black; display: block; position: absolute; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 1; }
-      textarea.emscripten { font-size: 8px; line-height: 1; color: yellow; background-color: black; position: absolute; width: 100%; height: 35%; bottom: 0; left: 0; z-index: 10; }
+      textarea.emscripten { font-size: 5%; line-height: 1; color: yellow; background-color: black; position: absolute; width: 100%; height: 35%; bottom: 0; left: 0; z-index: 10; }
       img.splash { width: 100%; height: 85%; top: 0; object-fit: fill; position: absolute; z-index: 3; }
       div.splash { width: 100%; height: 15%; bottom: 0; text-align: center; align-items: center; justify-content: center; background-color: #FFFFFF; position: absolute; z-index: 3; }
     </style>
