Take a wake lock while importing WAD file

--- a/app/shell_minimal.html
+++ b/app/shell_minimal.html
@@ -12,7 +12,7 @@
       canvas.emscripten { border: 0px none; background-color: black; display: block; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 1; }
       textarea.emscripten { font-size: 10px; font-family: monospace; line-height: 1; color: yellow; background-color: black; width: 100%; height: 35%; bottom: 0; left: 0; z-index: 10; }
       img.splash { width: 100%; height: 85%; top: 0; object-fit: fill; z-index: 3; }
-      div.splash { width: 100%; height: 15%; bottom: 0; text-align: center; align-items: center; justify-content: center; background-color: #FFFFFF; z-index: 3; }
+      div.splash { width: 100%; height: 15%; bottom: 0; text-align: center; align-items: center; justify-content: center; background-color: #FFFFFF; z-index: 4; }
     </style>
   </head>
   <body>
@@ -30,6 +30,7 @@
       // Used from C code
       var sys_fs_init_is_done = 0;
       var sys_fs_sync_is_done = 1;
+      var sys_screen_wake_lock = null;
       // Copy WAD file from SD card into emscripten idb filesystem
       var sys_open_wad_file_name = null;
       var sys_open_wad_file_blob = null;
