--- a/app/shell_minimal_debug.html
+++ b/app/shell_minimal_debug.html
@@ -6,7 +6,7 @@
     <title>Freedoom</title>
     <style>
       * { margin: 0; padding: 0; }
-      html, body { width: 100%; height: 100%; overflow: hidden; }
+      html, body { width: 100%; height: 100%; overflow: hidden; background-color: black; }
       .emscripten { display: block; }
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
       canvas.emscripten { border: 0px none; background-color: black; display: block; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 1; }
